--- a/wg-config-server/src/main/resources/application.properties
+++ b/wg-config-server/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8888
 
 spring.profiles.active=jdbc
 
-spring.cloud.config.server.jdbc.sql=SELECT `KEY`, `VALUE` from PROPERTIES where APPLICATION=? and PROFILE=? and LABEL=?
+spring.cloud.config.server.jdbc.sql=SELECT `KEY`, `VALUE` from properties where APPLICATION=? and PROFILE=? and LABEL=?
 
 spring.datasource.url=jdbc:mysql://localhost:3306/qh-common
 spring.datasource.username=root
-spring.datasource.password=950216
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
