更新元数据模块和修改之前中文转发乱码问题

--- a/wg-eureka-server/src/main/resources/application.properties
+++ b/wg-eureka-server/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=eureka-server
 spring.cloud.config.uri=http://localhost:8888/
 spring.cloud.config.profile=stage
 spring.cloud.config.label=master
+
+#中文乱码解决
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
