--- a/wg-metadata/src/main/resources/application.properties
+++ b/wg-metadata/src/main/resources/application.properties
@@ -3,12 +3,18 @@ spring.cloud.config.uri=http://localhost:8888/
 spring.cloud.config.profile=stage
 spring.cloud.config.label=master
 
+#中文乱码解决
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.banner.charset=UTF-8
+spring.http.encoding.charset=UTF-8
+server.tomcat.uri-encoding=UTF-8
+spring.messages.encoding=UTF-8
+
 #  数据库常用模块
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-active=100
-
-
 
 # jpa配置模块
 spring.jpa.properties.hibernate.show_sql=true
