--- a/wg-web/src/main/resources/jdbc.properties
+++ b/wg-web/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost:3306/qh-common?characterEncoding=utf8&allowMultiQueries=true
+db.url=jdbc:mysql://localhost:3306/qh-common?characterEncoding=utf8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false
 db.username=root
 db.password=950216
 db.driverClassName=com.mysql.jdbc.Driver
