--- a/wg-zuul/src/main/resources/application.properties
+++ b/wg-zuul/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=zuul
 spring.cloud.config.uri=http://localhost:8888/
 spring.cloud.config.profile=stage
 spring.cloud.config.label=master
+
+#中文乱码解决
+spring.http.encoding.force=true
+spring.http.encoding.enabled=true
+spring.http.encoding.charset=UTF-8
+server.tomcat.uri-encoding=UTF-8
